docs-archive/apache-airflow-providers-google/16.0.0/_sources/_api/airflow/providers/google/cloud/hooks/bigquery/index.rst.txt
airflow.providers.google.cloud.hooks.bigquery
=============================================

.. py:module:: airflow.providers.google.cloud.hooks.bigquery

.. autoapi-nested-parse::

   BigQuery Hook and a very basic PEP 249 implementation for BigQuery.



Attributes
----------

.. autoapisummary::

   airflow.providers.google.cloud.hooks.bigquery.log
   airflow.providers.google.cloud.hooks.bigquery.BigQueryJob


Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.hooks.bigquery.BigQueryHook
   airflow.providers.google.cloud.hooks.bigquery.BigQueryConnection
   airflow.providers.google.cloud.hooks.bigquery.BigQueryBaseCursor
   airflow.providers.google.cloud.hooks.bigquery.BigQueryCursor
   airflow.providers.google.cloud.hooks.bigquery.BigQueryAsyncHook
   airflow.providers.google.cloud.hooks.bigquery.BigQueryTableAsyncHook


Module Contents
---------------

.. py:data:: log

.. py:data:: BigQueryJob

.. py:class:: BigQueryHook(use_legacy_sql = True, location = None, priority = 'INTERACTIVE', api_resource_configs = None, impersonation_scopes = None, labels = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.common.hooks.base_google.GoogleBaseHook`, :py:obj:`airflow.providers.common.sql.hooks.sql.DbApiHook`


   Interact with BigQuery.

   This hook uses the Google Cloud connection.

   :param gcp_conn_id: The Airflow connection used for GCP credentials.
   :param use_legacy_sql: This specifies whether to use legacy SQL dialect.
   :param location: The location of the BigQuery resource.
   :param priority: Specifies a priority for the query.
       Possible values include INTERACTIVE and BATCH.
       The default value is INTERACTIVE.
   :param api_resource_configs: This contains params configuration applied for
       Google BigQuery jobs.
   :param impersonation_chain: This is the optional service account to
       impersonate using short term credentials.
   :param impersonation_scopes: Optional list of scopes for impersonated account.
       Will override scopes from connection.
   :param labels: The BigQuery resource label.


   .. py:attribute:: conn_name_attr
      :value: 'gcp_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'google_cloud_bigquery_default'



   .. py:attribute:: conn_type
      :value: 'gcpbigquery'



   .. py:attribute:: hook_name
      :value: 'Google Bigquery'



   .. py:method:: get_connection_form_widgets()
      :classmethod:


      Return connection widgets to add to connection form.



   .. py:method:: get_ui_field_behaviour()
      :classmethod:


      Return custom field behaviour.



   .. py:attribute:: use_legacy_sql
      :type:  bool


   .. py:attribute:: location
      :type:  str | None


   .. py:attribute:: priority
      :type:  str


   .. py:attribute:: running_job_id
      :type:  str | None
      :value: None



   .. py:attribute:: api_resource_configs
      :type:  dict


   .. py:attribute:: labels


   .. py:attribute:: impersonation_scopes
      :type:  str | collections.abc.Sequence[str] | None
      :value: None



   .. py:method:: get_conn()

      Get a BigQuery PEP 249 connection object.



   .. py:method:: get_client(project_id = PROVIDE_PROJECT_ID, location = None)

      Get an authenticated BigQuery Client.

      :param project_id: Project ID for the project which the client acts on behalf of.
      :param location: Default location for jobs / datasets / tables.



   .. py:method:: get_uri()

      Override from ``DbApiHook`` for ``get_sqlalchemy_engine()``.



   .. py:method:: get_sqlalchemy_engine(engine_kwargs = None)

      Create an SQLAlchemy engine object.

      :param engine_kwargs: Kwargs used in :func:`~sqlalchemy.create_engine`.



   .. py:method:: get_records(sql, parameters=None)

      Execute the sql and return a set of records.

      :param sql: the sql statement to be executed (str) or a list of sql statements to execute
      :param parameters: The parameters to render the SQL query with.



   .. py:method:: insert_rows(table, rows, target_fields = None, commit_every = 1000, replace = False, **kwargs)
      :abstractmethod:


      Insert rows.

      Insertion is currently unsupported. Theoretically, you could use
      BigQuery's streaming API to insert rows into a table, but this hasn't
      been implemented.



   .. py:method:: get_df(sql, parameters=None, dialect=None, *, df_type: typing_extensions.Literal[pandas] = 'pandas', **kwargs) -> pandas.DataFrame
                  get_df(sql, parameters=None, dialect=None, *, df_type: typing_extensions.Literal[polars], **kwargs) -> polars.DataFrame

      Get a DataFrame for the BigQuery results.

      The DbApiHook method must be overridden because Pandas doesn't support
      PEP 249 connections, except for SQLite.

      .. seealso::
          https://github.com/pandas-dev/pandas/blob/055d008615272a1ceca9720dc365a2abd316f353/pandas/io/sql.py#L415
          https://github.com/pandas-dev/pandas/issues/6900

      :param sql: The BigQuery SQL to execute.
      :param parameters: The parameters to render the SQL query with (not
          used, leave to override superclass method)
      :param dialect: Dialect of BigQuery SQL – legacy SQL or standard SQL
          defaults to use `self.use_legacy_sql` if not specified
      :param kwargs: (optional) passed into pandas_gbq.read_gbq method



   .. py:method:: get_pandas_df(sql, parameters=None, dialect=None, **kwargs)

      Execute the sql and returns a pandas dataframe.

      :param sql: the sql statement to be executed (str) or a list of sql statements to execute
      :param parameters: The parameters to render the SQL query with.
      :param kwargs: (optional) passed into pandas.io.sql.read_sql method



   .. py:method:: table_exists(dataset_id, table_id, project_id)

      Check if a table exists in Google BigQuery.

      :param project_id: The Google cloud project in which to look for the
          table. The connection supplied to the hook must provide access to
          the specified project.
      :param dataset_id: The name of the dataset in which to look for the
          table.
      :param table_id: The name of the table to check the existence of.



   .. py:method:: table_partition_exists(dataset_id, table_id, partition_id, project_id)

      Check if a partition exists in Google BigQuery.

      :param project_id: The Google cloud project in which to look for the
          table. The connection supplied to the hook must provide access to
          the specified project.
      :param dataset_id: The name of the dataset in which to look for the
          table.
      :param table_id: The name of the table to check the existence of.
      :param partition_id: The name of the partition to check the existence of.



   .. py:method:: create_empty_table(project_id = PROVIDE_PROJECT_ID, dataset_id = None, table_id = None, table_resource = None, schema_fields = None, time_partitioning = None, cluster_fields = None, labels = None, view = None, materialized_view = None, encryption_configuration = None, retry = DEFAULT_RETRY, location = None, exists_ok = True)

      Create a new, empty table in the dataset.

      To create a view, which is defined by a SQL query, parse a dictionary to
      the *view* argument.

      :param project_id: The project to create the table into.
      :param dataset_id: The dataset to create the table into.
      :param table_id: The Name of the table to be created.
      :param table_resource: Table resource as described in documentation:
          https://cloud.google.com/bigquery/docs/reference/rest/v2/tables#Table
          If provided all other parameters are ignored.
      :param schema_fields: If set, the schema field list as defined here:
          https://cloud.google.com/bigquery/docs/reference/rest/v2/jobs#configuration.load.schema

          .. code-block:: python

              schema_fields = [
                  {"name": "emp_name", "type": "STRING", "mode": "REQUIRED"},
                  {"name": "salary", "type": "INTEGER", "mode": "NULLABLE"},
              ]

      :param labels: a dictionary containing labels for the table, passed to BigQuery
      :param retry: Optional. How to retry the RPC.
      :param time_partitioning: configure optional time partitioning fields i.e.
          partition by field, type and expiration as per API specifications.

          .. seealso::
              https://cloud.google.com/bigquery/docs/reference/rest/v2/tables#timePartitioning
      :param cluster_fields: [Optional] The fields used for clustering.
          BigQuery supports clustering for both partitioned and
          non-partitioned tables.
          https://cloud.google.com/bigquery/docs/reference/rest/v2/tables#clustering.fields
      :param view: [Optional] A dictionary containing definition for the view.
          If set, it will create a view instead of a table:
          https://cloud.google.com/bigquery/docs/reference/rest/v2/tables#ViewDefinition

          .. code-block:: python

              view = {
                  "query": "SELECT * FROM `test-project-id.test_dataset_id.test_table_prefix*` LIMIT 1000",
                  "useLegacySql": False,
              }

      :param materialized_view: [Optional] The materialized view definition.
      :param encryption_configuration: [Optional] Custom encryption configuration (e.g., Cloud KMS keys).

          .. code-block:: python

              encryption_configuration = {
                  "kmsKeyName": "projects/testp/locations/us/keyRings/test-kr/cryptoKeys/test-key",
              }

      :param num_retries: Maximum number of retries in case of connection problems.
      :param location: (Optional) The geographic location where the table should reside.
      :param exists_ok: If ``True``, ignore "already exists" errors when creating the table.
      :return: Created table



   .. py:method:: create_table(dataset_id, table_id, table_resource, location = None, project_id = PROVIDE_PROJECT_ID, exists_ok = True, schema_fields = None, retry = DEFAULT_RETRY, timeout = None)

      Create a new, empty table in the dataset.

      :param project_id: Optional. The project to create the table into.
      :param dataset_id: Required. The dataset to create the table into.
      :param table_id: Required. The Name of the table to be created.
      :param table_resource: Required. Table resource as described in documentation:
          https://cloud.google.com/bigquery/docs/reference/rest/v2/tables#Table
          If ``table`` is a reference, an empty table is created with the specified ID. The dataset that
          the table belongs to must already exist.
      :param schema_fields: Optional. If set, the schema field list as defined here:
          https://cloud.google.com/bigquery/docs/reference/rest/v2/jobs#configuration.load.schema

          .. code-block:: python

              schema_fields = [
                  {"name": "emp_name", "type": "STRING", "mode": "REQUIRED"},
                  {"name": "salary", "type": "INTEGER", "mode": "NULLABLE"},
              ]
      :param location: Optional. The location used for the operation.
      :param exists_ok: Optional. If ``True``, ignore "already exists" errors when creating the table.
      :param retry: Optional. A retry object used  to retry requests. If `None` is specified, requests
          will not be retried.
      :param timeout: Optional. The amount of time, in seconds, to wait for the request to complete.
          Note that if `retry` is specified, the timeout applies to each individual attempt.



   .. py:method:: create_empty_dataset(dataset_id = None, project_id = PROVIDE_PROJECT_ID, location = None, dataset_reference = None, exists_ok = True)

      Create a new empty dataset.

      .. seealso:: https://cloud.google.com/bigquery/docs/reference/rest/v2/datasets/insert

      :param project_id: The name of the project where we want to create
          an empty a dataset. Don't need to provide, if projectId in dataset_reference.
      :param dataset_id: The id of dataset. Don't need to provide, if datasetId in dataset_reference.
      :param location: (Optional) The geographic location where the dataset should reside.
          There is no default value but the dataset will be created in US if nothing is provided.
      :param dataset_reference: Dataset reference that could be provided with request body. More info:
          https://cloud.google.com/bigquery/docs/reference/rest/v2/datasets#resource
      :param exists_ok: If ``True``, ignore "already exists" errors when creating the dataset.



   .. py:method:: get_dataset_tables(dataset_id, project_id = PROVIDE_PROJECT_ID, max_results = None, retry = DEFAULT_RETRY)

      Get the list of tables for a given dataset.

      For more information, see:
      https://cloud.google.com/bigquery/docs/reference/rest/v2/tables/list

      :param dataset_id: the dataset ID of the requested dataset.
      :param project_id: (Optional) the project of the requested dataset. If None,
          self.project_id will be used.
      :param max_results: (Optional) the maximum number of tables to return.
      :param retry: How to retry the RPC.
      :return: List of tables associated with the dataset.



   .. py:method:: delete_dataset(dataset_id, project_id = PROVIDE_PROJECT_ID, delete_contents = False, retry = DEFAULT_RETRY)

      Delete a dataset of Big query in your project.

      :param project_id: The name of the project where we have the dataset.
      :param dataset_id: The dataset to be delete.
      :param delete_contents: If True, delete all the tables in the dataset.
          If False and the dataset contains tables, the request will fail.
      :param retry: How to retry the RPC.



   .. py:method:: update_table(table_resource, fields = None, dataset_id = None, table_id = None, project_id = PROVIDE_PROJECT_ID)

      Change some fields of a table.

      Use ``fields`` to specify which fields to update. At least one field
      must be provided. If a field is listed in ``fields`` and is ``None``
      in ``table``, the field value will be deleted.

      If ``table.etag`` is not ``None``, the update will only succeed if
      the table on the server has the same ETag. Thus reading a table with
      ``get_table``, changing its fields, and then passing it to
      ``update_table`` will ensure that the changes will only be saved if
      no modifications to the table occurred since the read.

      :param project_id: The project to create the table into.
      :param dataset_id: The dataset to create the table into.
      :param table_id: The Name of the table to be created.
      :param table_resource: Table resource as described in documentation:
          https://cloud.google.com/bigquery/docs/reference/rest/v2/tables#Table
          The table has to contain ``tableReference`` or ``project_id``, ``dataset_id`` and ``table_id``
          have to be provided.
      :param fields: The fields of ``table`` to change, spelled as the Table
          properties (e.g. "friendly_name").



   .. py:method:: insert_all(project_id, dataset_id, table_id, rows, ignore_unknown_values = False, skip_invalid_rows = False, fail_on_error = False)

      Stream data into BigQuery one record at a time without a load job.

      .. seealso::
          For more information, see:
          https://cloud.google.com/bigquery/docs/reference/rest/v2/tabledata/insertAll

      :param project_id: The name of the project where we have the table
      :param dataset_id: The name of the dataset where we have the table
      :param table_id: The name of the table
      :param rows: the rows to insert

          .. code-block:: python

              rows = [{"json": {"a_key": "a_value_0"}}, {"json": {"a_key": "a_value_1"}}]

      :param ignore_unknown_values: [Optional] Accept rows that contain values
          that do not match the schema. The unknown values are ignored.
          The default value  is false, which treats unknown values as errors.
      :param skip_invalid_rows: [Optional] Insert all valid rows of a request,
          even if invalid rows exist. The default value is false, which causes
          the entire request to fail if any invalid rows exist.
      :param fail_on_error: [Optional] Force the task to fail if any errors occur.
          The default value is false, which indicates the task should not fail
          even if any insertion errors occur.



   .. py:method:: update_dataset(fields, dataset_resource, dataset_id = None, project_id = PROVIDE_PROJECT_ID, retry = DEFAULT_RETRY)

      Change some fields of a dataset.

      Use ``fields`` to specify which fields to update. At least one field
      must be provided. If a field is listed in ``fields`` and is ``None`` in
      ``dataset``, it will be deleted.

      If ``dataset.etag`` is not ``None``, the update will only
      succeed if the dataset on the server has the same ETag. Thus
      reading a dataset with ``get_dataset``, changing its fields,
      and then passing it to ``update_dataset`` will ensure that the changes
      will only be saved if no modifications to the dataset occurred
      since the read.

      :param dataset_resource: Dataset resource that will be provided
          in request body.
          https://cloud.google.com/bigquery/docs/reference/rest/v2/datasets#resource
      :param dataset_id: The id of the dataset.
      :param fields: The properties of ``dataset`` to change (e.g. "friendly_name").
      :param project_id: The Google Cloud Project ID
      :param retry: How to retry the RPC.



   .. py:method:: get_datasets_list(project_id = PROVIDE_PROJECT_ID, include_all = False, filter_ = None, max_results = None, page_token = None, retry = DEFAULT_RETRY, return_iterator = False)

      Get all BigQuery datasets in the current project.

      For more information, see:
      https://cloud.google.com/bigquery/docs/reference/rest/v2/datasets/list

      :param project_id: Google Cloud Project for which you try to get all datasets
      :param include_all: True if results include hidden datasets. Defaults to False.
      :param filter_: An expression for filtering the results by label. For syntax, see
          https://cloud.google.com/bigquery/docs/reference/rest/v2/datasets/list#filter.
      :param filter_: str
      :param max_results: Maximum number of datasets to return.
      :param max_results: int
      :param page_token: Token representing a cursor into the datasets. If not passed,
          the API will return the first page of datasets. The token marks the beginning of the
          iterator to be returned and the value of the ``page_token`` can be accessed at
          ``next_page_token`` of the :class:`~google.api_core.page_iterator.HTTPIterator`.
      :param page_token: str
      :param retry: How to retry the RPC.
      :param return_iterator: Instead of returning a list[Row], returns a HTTPIterator
          which can be used to obtain the next_page_token property.



   .. py:method:: get_dataset(dataset_id, project_id = PROVIDE_PROJECT_ID)

      Fetch the dataset referenced by *dataset_id*.

      :param dataset_id: The BigQuery Dataset ID
      :param project_id: The Google Cloud Project ID
      :return: dataset_resource

      .. seealso::
          For more information, see Dataset Resource content:
          https://cloud.google.com/bigquery/docs/reference/rest/v2/datasets#resource



   .. py:method:: run_grant_dataset_view_access(source_dataset, view_dataset, view_table, view_project = None, project_id = PROVIDE_PROJECT_ID)

      Grant authorized view access of a dataset to a view table.

      If this view has already been granted access to the dataset, do nothing.
      This method is not atomic. Running it may clobber a simultaneous update.

      :param source_dataset: the source dataset
      :param view_dataset: the dataset that the view is in
      :param view_table: the table of the view
      :param project_id: the project of the source dataset. If None,
          self.project_id will be used.
      :param view_project: the project that the view is in. If None,
          self.project_id will be used.
      :return: the datasets resource of the source dataset.



   .. py:method:: run_table_upsert(dataset_id, table_resource, project_id = PROVIDE_PROJECT_ID)

      Update a table if it exists, otherwise create a new one.

      Since BigQuery does not natively allow table upserts, this is not an
      atomic operation.

      :param dataset_id: the dataset to upsert the table into.
      :param table_resource: a table resource. see
          https://cloud.google.com/bigquery/docs/reference/v2/tables#resource
      :param project_id: the project to upsert the table into.  If None,
          project will be self.project_id.



   .. py:method:: delete_table(table_id, not_found_ok = True, project_id = PROVIDE_PROJECT_ID)

      Delete an existing table from the dataset.

      If the table does not exist, return an error unless *not_found_ok* is
      set to True.

      :param table_id: A dotted ``(<project>.|<project>:)<dataset>.<table>``
          that indicates which table will be deleted.
      :param not_found_ok: if True, then return success even if the
          requested table does not exist.
      :param project_id: the project used to perform the request



   .. py:method:: list_rows(dataset_id, table_id, max_results = None, selected_fields = None, page_token = None, start_index = None, project_id = PROVIDE_PROJECT_ID, location = None, retry = DEFAULT_RETRY, return_iterator = False)

      List rows in a table.

      See https://cloud.google.com/bigquery/docs/reference/rest/v2/tabledata/list

      :param dataset_id: the dataset ID of the requested table.
      :param table_id: the table ID of the requested table.
      :param max_results: the maximum results to return.
      :param selected_fields: List of fields to return (comma-separated). If
          unspecified, all fields are returned.
      :param page_token: page token, returned from a previous call,
          identifying the result set.
      :param start_index: zero based index of the starting row to read.
      :param project_id: Project ID for the project which the client acts on behalf of.
      :param location: Default location for job.
      :param retry: How to retry the RPC.
      :param return_iterator: Instead of returning a list[Row], returns a RowIterator
          which can be used to obtain the next_page_token property.
      :return: list of rows



   .. py:method:: get_schema(dataset_id, table_id, project_id = PROVIDE_PROJECT_ID)

      Get the schema for a given dataset and table.

      .. seealso:: https://cloud.google.com/bigquery/docs/reference/v2/tables#resource

      :param dataset_id: the dataset ID of the requested table
      :param table_id: the table ID of the requested table
      :param project_id: the optional project ID of the requested table.
              If not provided, the connector's configured project will be used.
      :return: a table schema



   .. py:method:: update_table_schema(schema_fields_updates, include_policy_tags, dataset_id, table_id, project_id = PROVIDE_PROJECT_ID)

      Update fields within a schema for a given dataset and table.

      Note that some fields in schemas are immutable; trying to change them
      will cause an exception.

      If a new field is included, it will be inserted, which requires all
      required fields to be set.

      .. seealso:: https://cloud.google.com/bigquery/docs/reference/rest/v2/tables#TableSchema

      :param include_policy_tags: If set to True policy tags will be included in
          the update request which requires special permissions even if unchanged
          see https://cloud.google.com/bigquery/docs/column-level-security#roles
      :param dataset_id: the dataset ID of the requested table to be updated
      :param table_id: the table ID of the table to be updated
      :param schema_fields_updates: a partial schema resource. See
          https://cloud.google.com/bigquery/docs/reference/rest/v2/tables#TableSchema

          .. code-block:: python

              schema_fields_updates = [
                  {"name": "emp_name", "description": "Some New Description"},
                  {"name": "salary", "description": "Some New Description"},
                  {
                      "name": "departments",
                      "fields": [
                          {"name": "name", "description": "Some New Description"},
                          {"name": "type", "description": "Some New Description"},
                      ],
                  },
              ]

      :param project_id: The name of the project where we want to update the table.



   .. py:method:: poll_job_complete(job_id, project_id = PROVIDE_PROJECT_ID, location = None, retry = DEFAULT_RETRY)

      Check if jobs have completed.

      :param job_id: id of the job.
      :param project_id: Google Cloud Project where the job is running
      :param location: location the job is running
      :param retry: How to retry the RPC.



   .. py:method:: cancel_job(job_id, project_id = PROVIDE_PROJECT_ID, location = None)

      Cancel a job and wait for cancellation to complete.

      :param job_id: id of the job.
      :param project_id: Google Cloud Project where the job is running
      :param location: location the job is running



   .. py:method:: get_job(job_id, project_id = PROVIDE_PROJECT_ID, location = None)

      Retrieve a BigQuery job.

      .. seealso:: https://cloud.google.com/bigquery/docs/reference/v2/jobs

      :param job_id: The ID of the job. The ID must contain only letters (a-z, A-Z),
          numbers (0-9), underscores (_), or dashes (-). The maximum length is 1,024
          characters.
      :param project_id: Google Cloud Project where the job is running.
      :param location: Location where the job is running.



   .. py:method:: insert_job(configuration, job_id = None, project_id = PROVIDE_PROJECT_ID, location = None, nowait = False, retry = DEFAULT_RETRY, timeout = None)

      Execute a BigQuery job and wait for it to complete.

      .. seealso:: https://cloud.google.com/bigquery/docs/reference/v2/jobs

      :param configuration: The configuration parameter maps directly to
          BigQuery's configuration field in the job object. See
          https://cloud.google.com/bigquery/docs/reference/v2/jobs for
          details.
      :param job_id: The ID of the job. The ID must contain only letters (a-z, A-Z),
          numbers (0-9), underscores (_), or dashes (-). The maximum length is 1,024
          characters. If not provided then uuid will be generated.
      :param project_id: Google Cloud Project where the job is running.
      :param location: Location the job is running.
      :param nowait: Whether to insert job without waiting for the result.
      :param retry: How to retry the RPC.
      :param timeout: The number of seconds to wait for the underlying HTTP transport
          before using ``retry``.
      :return: The job ID.



   .. py:method:: generate_job_id(job_id, dag_id, task_id, logical_date, configuration, force_rerun=False)


   .. py:method:: split_tablename(table_input, default_project_id, var_name = None)


   .. py:method:: get_query_results(job_id, location, max_results = None, selected_fields = None, project_id = PROVIDE_PROJECT_ID, retry = DEFAULT_RETRY, job_retry = DEFAULT_JOB_RETRY)

      Get query results given a job_id.

      :param job_id: The ID of the job.
          The ID must contain only letters (a-z, A-Z), numbers (0-9), underscores (_), or
          dashes (-). The maximum length is 1,024 characters.
      :param location: The location used for the operation.
      :param selected_fields: List of fields to return (comma-separated). If
          unspecified, all fields are returned.
      :param max_results: The maximum number of records (rows) to be fetched
          from the table.
      :param project_id: Google Cloud Project where the job ran.
      :param retry: How to retry the RPC.
      :param job_retry: How to retry failed jobs.

      :return: List of rows where columns are filtered by selected fields, when given

      :raises: AirflowException



   .. py:property:: scopes
      :type: collections.abc.Sequence[str]


      Return OAuth 2.0 scopes.

      :return: Returns the scope defined in impersonation_scopes, the connection configuration, or the default scope



.. py:class:: BigQueryConnection(*args, **kwargs)

   BigQuery connection.

   BigQuery does not have a notion of a persistent connection. Thus, these
   objects are small stateless factories for cursors, which do all the real
   work.


   .. py:method:: close()

      Do nothing. Not needed for BigQueryConnection.



   .. py:method:: commit()

      Do nothing. BigQueryConnection does not support transactions.



   .. py:method:: cursor()

      Return a new :py:class:`Cursor` object using the connection.



   .. py:method:: rollback()
      :abstractmethod:


      Do nothing. BigQueryConnection does not support transactions.



.. py:class:: BigQueryBaseCursor(service, project_id, hook, use_legacy_sql = True, api_resource_configs = None, location = None, num_retries = 5, labels = None)

   Bases: :py:obj:`airflow.utils.log.logging_mixin.LoggingMixin`


   BigQuery cursor.

   The BigQuery base cursor contains helper methods to execute queries against
   BigQuery. The methods can be used directly by operators, in cases where a
   PEP 249 cursor isn't needed.


   .. py:attribute:: service


   .. py:attribute:: project_id


   .. py:attribute:: use_legacy_sql
      :value: True



   .. py:attribute:: api_resource_configs
      :type:  dict


   .. py:attribute:: running_job_id
      :type:  str | None
      :value: None



   .. py:attribute:: location
      :value: None



   .. py:attribute:: num_retries
      :value: 5



   .. py:attribute:: labels
      :value: None



   .. py:attribute:: hook


.. py:class:: BigQueryCursor(service, project_id, hook, use_legacy_sql = True, location = None, num_retries = 5)

   Bases: :py:obj:`BigQueryBaseCursor`


   A very basic BigQuery PEP 249 cursor implementation.

   The PyHive PEP 249 implementation was used as a reference:

   https://github.com/dropbox/PyHive/blob/master/pyhive/presto.py
   https://github.com/dropbox/PyHive/blob/master/pyhive/common.py


   .. py:attribute:: buffersize
      :type:  int | None
      :value: None



   .. py:attribute:: page_token
      :type:  str | None
      :value: None



   .. py:attribute:: job_id
      :type:  str | None
      :value: None



   .. py:attribute:: buffer
      :type:  list
      :value: []



   .. py:attribute:: all_pages_loaded
      :type:  bool
      :value: False



   .. py:property:: description
      :type: list


      Return the cursor description.



   .. py:method:: close()

      By default, do nothing.



   .. py:property:: rowcount
      :type: int


      By default, return -1 to indicate that this is not supported.



   .. py:method:: execute(operation, parameters = None)

      Execute a BigQuery query, and update the BigQueryCursor description.

      :param operation: The query to execute.
      :param parameters: Parameters to substitute into the query.



   .. py:method:: executemany(operation, seq_of_parameters)

      Execute a BigQuery query multiple times with different parameters.

      :param operation: The query to execute.
      :param seq_of_parameters: List of dictionary parameters to substitute into the
          query.



   .. py:method:: flush_results()

      Flush results related cursor attributes.



   .. py:method:: fetchone()

      Fetch the next row of a query result set.



   .. py:method:: next()

      Return the next row from a buffer.

      Helper method for ``fetchone``.

      If the buffer is empty, attempts to paginate through the result set for
      the next page, and load it into the buffer.



   .. py:method:: fetchmany(size = None)

      Fetch the next set of rows of a query result.

      This returns a sequence of sequences (e.g. a list of tuples). An empty
      sequence is returned when no more rows are available.

      The number of rows to fetch per call is specified by the parameter. If
      it is not given, the cursor's arraysize determines the number of rows to
      be fetched.

      This method tries to fetch as many rows as indicated by the size
      parameter. If this is not possible due to the specified number of rows
      not being available, fewer rows may be returned.

      An :py:class:`~pyhive.exc.Error` (or subclass) exception is raised if
      the previous call to :py:meth:`execute` did not produce any result set,
      or no call was issued yet.



   .. py:method:: fetchall()

      Fetch all (remaining) rows of a query result.

      A sequence of sequences (e.g. a list of tuples) is returned.



   .. py:method:: get_arraysize()

      Get number of rows to fetch at a time.

      .. seealso:: :func:`.fetchmany()`



   .. py:method:: set_arraysize(arraysize)

      Set the number of rows to fetch at a time.

      .. seealso:: :func:`.fetchmany()`



   .. py:attribute:: arraysize


   .. py:method:: setinputsizes(sizes)

      Do nothing by default.



   .. py:method:: setoutputsize(size, column = None)

      Do nothing by default.



.. py:class:: BigQueryAsyncHook(gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.common.hooks.base_google.GoogleBaseAsyncHook`


   Uses gcloud-aio library to retrieve Job details.


   .. py:attribute:: sync_hook_class


   .. py:method:: get_job_instance(project_id, job_id, session)
      :async:


      Get the specified job resource by job ID and project ID.



   .. py:method:: get_job_status(job_id, project_id = PROVIDE_PROJECT_ID, location = None)
      :async:



   .. py:method:: get_job_output(job_id, project_id = PROVIDE_PROJECT_ID)
      :async:


      Get the BigQuery job output for a given job ID asynchronously.



   .. py:method:: create_job_for_partition_get(dataset_id, table_id = None, project_id = PROVIDE_PROJECT_ID)
      :async:


      Create a new job and get the job_id using gcloud-aio.



   .. py:method:: cancel_job(job_id, project_id, location)
      :async:


      Cancel a BigQuery job.

      :param job_id: ID of the job to cancel.
      :param project_id: Google Cloud Project where the job was running.
      :param location: Location where the job was running.



   .. py:method:: get_records(query_results, as_dict = False, selected_fields = None)

      Convert a response from BigQuery to records.

      :param query_results: the results from a SQL query
      :param as_dict: if True returns the result as a list of dictionaries, otherwise as list of lists.
      :param selected_fields:



   .. py:method:: value_check(sql, pass_value, records, tolerance = None)

      Match a single query resulting row and tolerance with pass_value.

      :raise AirflowException: if matching fails



   .. py:method:: interval_check(row1, row2, metrics_thresholds, ignore_zero, ratio_formula)

      Check values of metrics (SQL expressions) are within a certain tolerance.

      :param row1: first resulting row of a query execution job for first SQL query
      :param row2: first resulting row of a query execution job for second SQL query
      :param metrics_thresholds: a dictionary of ratios indexed by metrics, for
          example 'COUNT(*)': 1.5 would require a 50 percent or less difference
          between the current day, and the prior days_back.
      :param ignore_zero: whether we should ignore zero metrics
      :param ratio_formula: which formula to use to compute the ratio between
          the two metrics. Assuming cur is the metric of today and ref is
          the metric to today - days_back.
          max_over_min: computes max(cur, ref) / min(cur, ref)
          relative_diff: computes abs(cur-ref) / ref



.. py:class:: BigQueryTableAsyncHook(gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.common.hooks.base_google.GoogleBaseAsyncHook`


   Async hook for BigQuery Table.


   .. py:attribute:: sync_hook_class


   .. py:method:: get_table_client(dataset, table_id, project_id, session)
      :async:


      Get a Google Big Query Table object.

      :param dataset:  The name of the dataset in which to look for the table storage bucket.
      :param table_id: The name of the table to check the existence of.
      :param project_id: The Google cloud project in which to look for the table.
          The connection supplied to the hook must provide
          access to the specified project.
      :param session: aiohttp ClientSession



